# knowledge-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  MEGAPROMPT_DOCBOT.md  Procfile  pyproject.toml  railway.toml
db/migrations/: 001_extensions.sql  002_tables.sql  003_indexes.sql
docker/: docker-compose.yml
scripts/: sync_local.py
src/docbot/: __init__.py  config.py  database.py  embeddings.py  models.py
src/docbot/agent/: __init__.py  graph.py  tools.py
src/docbot/api/: app.py  schemas.py
src/docbot/api/routes/: answer.py  chat.py  health.py  search.py  sync.py
src/docbot/commands/: __init__.py  user_story.py
src/docbot/indexer/: chunker.py  edge_extractor.py  parser.py  sync.py
src/docbot/rag/: answerer.py  prompts.py
src/docbot/search/: graph.py  hybrid.py
src/docbot/static/: index.html
tests/: conftest.py  test_chunker.py  test_parser.py
