[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroq-docbot"
version = "0.1.0"
description = "RAG + Knowledge Graph agent para documentación interna de ZeroQ"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "openai>=1.50.0",
    "python-frontmatter>=1.1.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0.0",
    "structlog>=24.4.0",
    "gitpython>=3.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "langgraph>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-core>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
